--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-header
-      aria-role="heading"
-      level="1">
-        My custom header
-      </hs-header>
+    <hs-grid
+    column="3">
+      <hs-button>a</hs-button>
+      <hs-button>a</hs-button>
+      <hs-button>a</hs-button>
+      <hs-button>a</hs-button>
+    </hs-grid>
     <hs-header
       aria-role="heading"
       text-align="left"
