radio, flex and help text

--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,20 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-grid
-    column="3">
-      <hs-button>a</hs-button>
-      <hs-button>a</hs-button>
-      <hs-button>a</hs-button>
-      <hs-button>a</hs-button>
-    </hs-grid>
-    <hs-header
-      aria-role="heading"
-      text-align="left"
-      aria-label="My custom header"
-      level="2">
-        My H2 header
-      </hs-header>
-    <hs-header
-      aria-role="heading"
-      text-align="right"
-      aria-label="Another custom header"
-      level="3">
-        My H3 header
-      </hs-header>
+    <hs-help-text type="error"></hs-help-text>
+    <hs-flex 
+    direction="row">
+      <hs-button>1</hs-button>
+      <hs-button>1</hs-button>
+      <hs-button>1</hs-button>
+      <hs-button>1</hs-button>
+    </hs-flex>
+      <!-- <hs-radio-group name="destinations" selected="3">
+          <hs-radio-button value="1">London</hs-radio-button>
+          <hs-radio-button value="2">Paris</hs-radio-button>
+          <hs-radio-button value="3">Madrid</hs-radio-button>
+          <hs-radio-button value="4">Rome</hs-radio-button>
+          <hs-radio-button value="5">New York</hs-radio-button>
+    </hs-radio-group> -->
   </body>
   </html>
