--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-help-text type="error"></hs-help-text>
+    <hs-help-text type="error">prova prova prova</hs-help-text>
     <hs-flex 
     direction="row">
       <hs-button>1</hs-button>
