--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,7 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-help-text type="error">prova prova prova</hs-help-text>
-    <hs-flex 
-    direction="row">
-      <hs-button>1</hs-button>
-      <hs-button>1</hs-button>
-      <hs-button>1</hs-button>
-      <hs-button>1</hs-button>
-    </hs-flex>
+    <hs-button variant="pill" disabled="true">button</hs-button>
       <!-- <hs-radio-group name="destinations" selected="3">
           <hs-radio-button value="1">London</hs-radio-button>
           <hs-radio-button value="2">Paris</hs-radio-button>
@@ -25,5 +18,9 @@
           <hs-radio-button value="4">Rome</hs-radio-button>
           <hs-radio-button value="5">New York</hs-radio-button>
     </hs-radio-group> -->
+    <hs-stack orientation="vertical" gap="small">
+      <img src="test.png" />
+      <button>Save</button>
+     </hs-stack>
   </body>
   </html>
