--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-button variant="pill" disabled="true">button</hs-button>
       <!-- <hs-radio-group name="destinations" selected="3">
           <hs-radio-button value="1">London</hs-radio-button>
           <hs-radio-button value="2">Paris</hs-radio-button>
@@ -18,9 +17,9 @@
           <hs-radio-button value="4">Rome</hs-radio-button>
           <hs-radio-button value="5">New York</hs-radio-button>
     </hs-radio-group> -->
-    <hs-stack orientation="vertical" gap="small">
-      <img src="test.png" />
-      <button>Save</button>
+    <hs-stack orientation="vertical" gap="large">
+      <hs-button variant="pill" disabled="true">button</hs-button>
+      <hs-button variant="pill" disabled="true">button</hs-button>
      </hs-stack>
   </body>
   </html>
