--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,21 @@
           <hs-radio-button value="4">Rome</hs-radio-button>
           <hs-radio-button value="5">New York</hs-radio-button>
     </hs-radio-group> -->
-    <hs-stack orientation="vertical" gap="large">
+    <!-- <hs-stack orientation="vertical" gap="large">
       <hs-button variant="pill" disabled="true">button</hs-button>
       <hs-button variant="pill" disabled="true">button</hs-button>
-     </hs-stack>
+     </hs-stack> -->
+
+     <hs-text-input
+     type="error"
+     help-text="true"
+     help-text-content="Please provide a valid email."
+     placeholder="Email"
+     label="Input label"
+     >
+     </hs-text-input>
+
+     <!-- <hs-help-text>help text help text</hs-help-text> -->
+
   </body>
   </html>
