fixes and stories

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
       <hs-button variant="pill" disabled="true">button</hs-button>
      </hs-stack> -->
 
+     <!-- <hs-header level="1" textAlign="left">Header</hs-header>
+
      <hs-text-input
      type="error"
      help-text="true"
@@ -29,9 +31,27 @@
      placeholder="Email"
      label="Input label"
      >
-     </hs-text-input>
+     </hs-text-input> -->
 
      <!-- <hs-help-text>help text help text</hs-help-text> -->
 
+     <!-- <hs-flex 
+    direction="row"
+    xAlign="center"
+    yAlign="space-around"
+    gap="2"
+    wrap="false"
+    >
+    <hs-button></hs-button>
+    <hs-button></hs-button>
+    <hs-button></hs-button>
+
+  </hs-flex>
+   -->
+  <hs-stack orientation="${args.orientation}" gap="${args.gap}">
+    <hs-button></hs-button>
+    <hs-button></hs-button>
+    <hs-button></hs-button>
+  </hs-stack>
   </body>
   </html>
