--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,24 @@
 
   </hs-flex>
    -->
-  <hs-stack orientation="${args.orientation}" gap="${args.gap}">
+  <!-- <hs-stack orientation="${args.orientation}" gap="${args.gap}">
     <hs-button></hs-button>
     <hs-button></hs-button>
     <hs-button></hs-button>
-  </hs-stack>
+  </hs-stack> -->
+
+  <hs-list type="ordered">
+    <li>prova</li>
+    <li>prova</li>
+    <li>prova</li>
+    <li>prova</li>
+  </hs-list>
+
+  <hs-list type="unordered">
+    <li>prova</li>
+    <li>prova</li>
+    <li>prova</li>
+    <li>prova</li>
+  </hs-list>
   </body>
   </html>
