--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <hs-button></hs-button>
   </hs-stack> -->
 
-  <hs-list type="ordered">
+  <!-- <hs-list type="ordered">
     <li>prova</li>
     <li>prova</li>
     <li>prova</li>
@@ -66,6 +66,27 @@
     <li>prova</li>
     <li>prova</li>
     <li>prova</li>
-  </hs-list>
+  </hs-list> -->
+
+  <hs-callout type="info">
+    <div>
+      <hs-header level="4">Callout Title</hs-header>
+      <p>Callout Content</p>
+    </div>
+  </hs-callout>
+
+  <hs-callout type="warning">
+    <div>
+      <hs-header level="4">Callout Title</hs-header>
+      <p>Callout Content</p>
+    </div>
+  </hs-callout>
+
+  <hs-callout type="success">
+    <div>
+      <hs-header level="4">Callout Title</hs-header>
+      <p>Callout Content</p>
+    </div>
+  </hs-callout>
   </body>
   </html>
