--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
     <li>prova</li>
   </hs-list> -->
 
-  <hs-callout type="info">
+  <!-- <hs-callout type="info">
     <div>
       <hs-header level="4">Callout Title</hs-header>
       <p>Callout Content</p>
@@ -87,6 +87,14 @@
       <hs-header level="4">Callout Title</hs-header>
       <p>Callout Content</p>
     </div>
-  </hs-callout>
+  </hs-callout> -->
+
+  <!-- <hs-card
+    type="small"
+    background-image="https://images.pexels.com/photos/92069/pexels-photo-92069.jpeg"
+    header="Card header"
+    content="$9.50"
+  ></hs-card> -->
+  
   </body>
   </html>
